fixed broken link to drag gripper icon 2

--- a/docs/icons/icon-usage.mdx
+++ b/docs/icons/icon-usage.mdx
@@ -30,7 +30,7 @@ We use distinct icons to signal different types of menus:
 
 <IconTable data={IconExamplesMenu}></IconTable>
 
-The [drag-gripper icon](../icons/icon-library#drag-gripper) is visually similar but is not a menu icon and should be used for drag-and-drop interactions to reorder items.
+The <a href={`/docs/icons/icon-library#drag-gripper`}>drag-gripper icon</a> is visually similar but isn't a menu icon and should be used for drag-and-drop interactions to reorder items.
 
 ### Example of menu icons
 
