--- a/docs/icons/icon-usage.mdx
+++ b/docs/icons/icon-usage.mdx
@@ -39,8 +39,8 @@ The illustration demonstrates the standard layout, featuring the apps icon in th
 ![Menu icons](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7420-16011&t=HOxEXsgRcyJFe982-4)
 
 Upon resizing to a smaller screen, the [layout adapts](../components/application-header/guide#behavior):
-- The left navigation collapses into a menu icon in the header.
-- The app switch icon then relocates into this expandable menu.
+- The left navigation collapses into a menu icon in the application header.
+- The app switch icon then relocates into the expandable menu.
 - Actions previously visible in the application header move into a dropdown, indicated by the more menu icon.
 
 ![Menu icons small screens](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7428-36686&t=HOxEXsgRcyJFe982-4)
