doc/formatting corrected

--- a/docs/guidelines/language/time-related-messages.mdx
+++ b/docs/guidelines/language/time-related-messages.mdx
@@ -26,7 +26,7 @@ Upcoming system update: 22 August
 </div>
 </div>
 
-### Use the user's time zone when providing any kind of time indication.
+### Use the user’s time zone when providing any kind of time indication.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
@@ -269,10 +269,10 @@ Pause
 </div>
 </div>
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 * Do add user actions when possible, e.g. buttons or links
-* Don't leave users wondering if the app is stuck or broken
-* Don't guess unknown time frames
+* Don’t leave users wondering if the app is stuck or broken
+* Don’t guess unknown time frames
 
 ## Related
