--- a/docs/guidelines/language/toast-messages.mdx
+++ b/docs/guidelines/language/toast-messages.mdx
@@ -22,9 +22,29 @@ Although always short, toast messages vary in length and complexity:
 
 | Anatomy | Content | Structure and examples |
 |---------|---------|------------------------|
-| **1. Heading** | Tell users the exact outcome of their action (for system toast messages, see the status and event section). | Noun + simple past tense verb:<br>Data downloaded</br><br>Asset deleted</br><br>Device deleted</br><br>Connection restored</br><br/>Scan cancelled<br/><br>Asset not offboarded</br> |
-| **2. Description** | Provide additional, relevant information. | Heading: Maintenance scheduled<br/>Description: Exchange filer in room 500 on August 10.<br/><br/>Heading: File 4a.ext not uploaded<br/>Description: File 4a.ext exceeds 25 MB |
-| **3. Action** | Give users the ability to undo the action or provide a link to further information. | Action verb + noun:<br/><br/>Heading: Asset deleted<br/>Description: Asset 4a_203/22<br/>Action: Undo<br/><br/>Heading: Scan scheduled<br/>Description: Scan gateway ANC_GW February 12<br/>Action: Open schedule<br/><br/>Heading: Asset not onboarded<br/>Description: Failed to reach Asset 4a<br/>Action: Try again |
+| **1. Heading** | Tell users the exact outcome of their action (for system toast messages, see the status and event section). | Noun + simple past tense verb:
+
+Data downloaded Asset deleted
+Device deleted
+Connection restored
+Scan cancelled
+Asset not offboarded |
+| **2. Description** | Provide additional, relevant information. | Heading: Maintenance scheduled
+Description: Exchange filer in room 500 on August 10.
+Heading: File 4a.ext not uploaded
+Description: File 4a.ext exceeds 25 MB |
+| **3. Action** | Give users the ability to undo the action or provide a link to further information. | Action verb + noun:
+Heading: Asset deleted
+Description: Asset 4a_203/22
+Action: Undo
+
+Heading: Scan scheduled
+Description: Scan gateway ANC_GW February 12
+Action: Open schedule
+
+Heading: Asset not onboarded
+Description: Failed to reach Asset 4a
+Action: Try again |
 
 ## General rules
 
