--- a/docs/guidelines/language/tooltips.mdx
+++ b/docs/guidelines/language/tooltips.mdx
@@ -134,8 +134,8 @@ Edit (as text) Tooltip: Edit
 
 * Do write tooltips to give more context about complex features
 * Do write tooltips to support beginners
-* Don't use tooltips to convey lengthy or critical information
-* Don't add irrelevant information; focus on context
+* Don’t use tooltips to convey lengthy or critical information
+* Don’t add irrelevant information; focus on context
 
 ## Related
 
