--- a/docs/guidelines/language/warning-messages.mdx
+++ b/docs/guidelines/language/warning-messages.mdx
@@ -126,7 +126,7 @@ Press reset to proceed.
 </div>
 </div>
 
-### Avoid using all uppercase text as it can be difficult to read and may seem like we're shouting.
+### Avoid using all uppercase text as it can be difficult to read and may seem like we’re shouting.
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
@@ -134,13 +134,13 @@ WARNING!! FAILURE! IMMEDIATE ACTION REQUIRED!!
 </div>
 </div>
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 * Do be consistent by re-using the verbs of the message and buttons
-* Do make sure users understand the warning's context
+* Do make sure users understand the warning’s context
 * Do give users actions to avoid any negative consequences
-* Don't use "please" with the call to action or options
-* Don't use patronizing questions such as "Are you sure…?"
+* Don’t use "please" with the call to action or options
+* Don’t use patronizing questions such as "Are you sure…?"
 
 ## Related
 
