fix dos and donts syntax to avoid react console errors

--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -56,8 +56,8 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 
 ## Dos and Don’ts
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Do use consistent time formats throughout the application to avoid confusion
 - Do add helper text to clarify the time format being used
@@ -65,7 +65,7 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 - Do consider localization to adapt time formats to local conventions
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Don’t use the same input for start and end times, instead separate them
 
