--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -40,15 +40,15 @@ An individual time item of a time picker has five states: Default, hover, active
 
 ## Dos and Don’ts
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Do use the time picker to ensure accurate time selection (we recommend to use [time inputs](../input-time) for that reason)
 - Do provide clear instructions and labels for users
 - Do ensure the time picker is accessible via keyboard
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Don’t clutter the time picker with unnecessary options
 
