--- a/docs/guidelines/conversational-design/essentials/wording-terms.mdx
+++ b/docs/guidelines/conversational-design/essentials/wording-terms.mdx
@@ -29,8 +29,8 @@ Use any of the five messages depending on your product and use case.
 - **With username:** Hello Felix, how can I help you today?
 - **With product and username:** Hello Sara, I'm  [Copilot name]. How can I help you today?
 
-<div class="dos-and-donts" markdown>
-<div class="donts" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="donts" markdown="true">
 
 - Well, hello! I’m your friendly chatbot.
 - Welcome to chatbot. State your issue now.
@@ -43,15 +43,15 @@ Use any of the five messages depending on your product and use case.
 
 Use these universal, non-specific options to encourage solution and technology-focused input. Avoid generic, open placeholders that encourage off-topic queries.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Enter your query here…
 - Enter a command, question or topic…
 - Enter a command, question or topic to begin…
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Ask me anything…
 - Start typing…
@@ -62,8 +62,8 @@ Use these universal, non-specific options to encourage solution and technology-f
 
 Use alternative placeholder text when your chatbot has a single use case.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Search technical documentation…
 - Enter error code…
@@ -76,13 +76,13 @@ Use alternative placeholder text when your chatbot has a single use case.
 
 Always use “generate” as the main progress indicator verb with ellipses (...).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Generating…
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Generating response
 - Creating response…
@@ -92,14 +92,14 @@ Always use “generate” as the main progress indicator verb with ellipses (...
 
 Use “generate” to match the action verb to stop the chatbot responding or ask the chatbot to continue responding without ellipses.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Stop generating
 - Continue generating
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Stop generating…
 - Continue generating…
@@ -111,8 +111,8 @@ Use “generate” to match the action verb to stop the chatbot responding or as
 
 Use a tooltip on hover to clarify any recording limitations and tell users how to stop recording.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Click to start and stop voice recording.
 - Click to start and stop voice recording (max 2 minutes).
@@ -122,13 +122,13 @@ Use a tooltip on hover to clarify any recording limitations and tell users how t
 
 Use “Recording…” as feedback to show the feature is working.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Recording…
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - I’m listening…
 
@@ -139,14 +139,14 @@ Use “Recording…” as feedback to show the feature is working.
 
 Use thumbs up and down icons to request feedback.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Thumbs up icon (<IxIcon name={iconThumbUp} size="16"></IxIcon>)
 - Thumbs down icon (<IxIcon name={iconThumbDown} size="16"></IxIcon>)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Helpful
 - Not helpful
@@ -158,8 +158,8 @@ Use thumbs up and down icons to request feedback.
 
 Use “last” instead of “previous” and “prior” for time-related terminology in chat history.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Today
 - Yesterday
@@ -168,7 +168,7 @@ Use “last” instead of “previous” and “prior” for time-related termin
 - Older
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Previous 7 days
 - Prior week
@@ -188,8 +188,8 @@ Use “last” instead of “previous” and “prior” for time-related termin
 
 Use the following action wording for consistency within all our chatbots.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - New chat
 - Send
@@ -207,7 +207,7 @@ Use the following action wording for consistency within all our chatbots.
 - Close chat window
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Clear chat
 - Submit
@@ -235,13 +235,13 @@ Book webinar
 
 Use “sources” as the text label to indicate where the generated information is from.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Sources
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Resources
 - Sources and references
@@ -255,8 +255,8 @@ Avoid mixing terms (resources, sources) and instead label the source format, e.g
 
 Use clear wording to differentiate between multiple bots when displaying output.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Responses generated by agent X
 - Responses generated by: agent X (with agent selection dropdown)
@@ -268,15 +268,15 @@ Use clear wording to differentiate between multiple bots when displaying output.
 
 Avoid punctuation, such as exclamation marks for buttons, hover text, titles and tags.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Show more
 - Send
 - Stop
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Show more!
 - Send?
@@ -290,8 +290,8 @@ Most problematic wording involves the bot expressing itself as a human with huma
 
 Use “generating” not “thinking” as chatbots don’t perform cognitive processes.
 
-<div class="dos-and-donts" markdown>
-<div class="donts" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="donts" markdown="true">
 
 - Thinking…
 - Thinking about the best response…
@@ -301,8 +301,8 @@ Use “generating” not “thinking” as chatbots don’t perform cognitive pr
 
 Avoid prompting emotional language like “I’m afraid…” in industrial chatbots.
 
-<div class="dos-and-donts" markdown>
-<div class="donts" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="donts" markdown="true">
 
 - I’m afraid that I can’t help you right now as I’m assessing the data.
 - I understand what you mean.
@@ -312,8 +312,8 @@ Avoid prompting emotional language like “I’m afraid…” in industrial chat
 
 Avoid technical, robotic phrases like “Please stand by…” as these are outdated, passive and unhelpful.
 
-<div class="dos-and-donts" markdown>
-<div class="donts" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="donts" markdown="true">
 
 - Please stand by while I process your request.
 - Please wait while I prepare a response.
