--- a/docs/guidelines/language/formatting/addresses.mdx
+++ b/docs/guidelines/language/formatting/addresses.mdx
@@ -12,13 +12,13 @@ description: In industrial applications, writing addresses clearly and consisten
 
 Use specific text field labels for different parts of the address.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Number | Street | State | ZIP code | Country
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Address line 1, Address line 2, Address line 3
 
@@ -27,8 +27,8 @@ Use specific text field labels for different parts of the address.
 
 Ensure special and international characters are accepted for international addresses.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 12-142 Elm St
 - #8C (unit or suite number)
@@ -41,8 +41,8 @@ Ensure special and international characters are accepted for international addre
 
 Use commas to separate names, streets, states and countries to prevent errors when there is only one text field.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - John Doe, 123 Maple Street, Springfield, California, 62704, United States
 
@@ -53,8 +53,8 @@ Use commas to separate names, streets, states and countries to prevent errors wh
 
 Use a comma between cities and states and other regions, e.g. cities within Cantons.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Springfield, Illinois
 - Munich, Bavaria
@@ -65,13 +65,13 @@ Use a comma between cities and states and other regions, e.g. cities within Cant
 
 Use capital letters for abbreviated states without a full stop.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - IL
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Il.
 
@@ -82,15 +82,15 @@ Use capital letters for abbreviated states without a full stop.
 
 Use the correct regional format for ZIP codes, including any necessary spaces or hyphens.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 90210 (US)
 - SW1A 2AA (UK)
 - 123-4567 (Japan)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 90 21 0 (US)
 - SW1A2AA (UK)
@@ -119,8 +119,8 @@ Use common abbreviations for street types without full stops to avoid visual clu
 
 Add floor numbers either before or after the word and note different international floor counting systems.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Floor 3
 - 3rd floor
@@ -129,7 +129,7 @@ Add floor numbers either before or after the word and note different internation
 - Floor G (international)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Floor 3rd
 
@@ -138,8 +138,8 @@ Add floor numbers either before or after the word and note different internation
 
 Use numbers and letters after buildings, suites, apartments, rooms and floors.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Building A
 - Building part
@@ -154,8 +154,8 @@ Use numbers and letters after buildings, suites, apartments, rooms and floors.
 
 Use "Line" or add a description, e.g. "Assembly line" and use "Zone" or "Area" for larger facilities.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Assembly line 2
 - Line B
@@ -169,8 +169,8 @@ Use "Line" or add a description, e.g. "Assembly line" and use "Zone" or "Area" f
 
 Use clear labels when possible with "Latitude" first, then "Longitude".
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Latitude: 48.14389° | Longitude: 11.57633°
 
@@ -179,8 +179,8 @@ Use clear labels when possible with "Latitude" first, then "Longitude".
 
 Use plus (+), minus (-), a comma and a space when adding both in one text field.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - +48.14389°, +11.57633°
 
@@ -189,13 +189,13 @@ Use plus (+), minus (-), a comma and a space when adding both in one text field.
 
 Use the correct degree symbol (Unicode U+00B0).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - °
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - o
 
