--- a/docs/guidelines/language/formatting/money.mdx
+++ b/docs/guidelines/language/formatting/money.mdx
@@ -13,13 +13,13 @@ description: 'Understanding money and currency is important for designing user i
 
 Place the currency symbol before the amount in English and use the same formatting style throughout.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - £320
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 320£
 - £320/£320.00/Three hundred and twenty pounds/320 pounds (mixed styles)
@@ -29,14 +29,14 @@ Place the currency symbol before the amount in English and use the same formatti
 
 Use decimal points for cents or smaller units within English user interfaces.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - €999.50
 - $400,456.50
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - €999,50
 - $400.456,50
@@ -46,13 +46,13 @@ Use decimal points for cents or smaller units within English user interfaces.
 
 Never add a space between the currency symbol and the amount.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - $100
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - $ 100
 
@@ -61,13 +61,13 @@ Never add a space between the currency symbol and the amount.
 
 Use the ISO currency code before the number without a space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - USD400
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 300USD
 
@@ -76,8 +76,8 @@ Use the ISO currency code before the number without a space.
 
 Use numbers and currency symbols within the UI when talking about marketing and pricing.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Thank you. Your payment of $50 has been processed.
 - Invest in our new soft sensors for $6,000 to boost your production efficiency.
@@ -89,8 +89,8 @@ Use numbers and currency symbols within the UI when talking about marketing and 
 
 Write out the full word in formal and legal documents.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - The total amount shall not exceed four thousand dollars.
 
