--- a/docs/guidelines/language/formatting/names-titles.mdx
+++ b/docs/guidelines/language/formatting/names-titles.mdx
@@ -14,14 +14,14 @@ description: Accurate and consistent use of names and titles is essential for ma
 
 Use "First name" and "Last name" in forms and ensure text fields accept names with only one letter.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - First name
 - Last name
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Surname
 - Full name
@@ -33,8 +33,8 @@ Use "First name" and "Last name" in forms and ensure text fields accept names wi
 
 Use first names to welcome users to applications.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Welcome Susanne
 
@@ -45,13 +45,13 @@ Use first names to welcome users to applications.
 
 Avoid gendered titles unless absolutely necessary for your application. Use "Title", not "Honorific", to describe words such as Mr. and Mrs. Note that not all cultures have equivalents to some titles used in the United States, such as Ms.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - [ Mr. | Ms. | Mx. | None | Other | Prefer not to say]
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - [ Mr. | Mrs. | Miss | Ms. ]
 
@@ -62,13 +62,13 @@ Avoid gendered titles unless absolutely necessary for your application. Use "Tit
 
 Use full stops for all abbreviated titles in American English.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Mr. Smith
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Mr Smith
 
@@ -77,15 +77,15 @@ Use full stops for all abbreviated titles in American English.
 
 Use titles with full names or surnames but do not use titles when addressing users with only their first name.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Mrs. Turner
 - Mrs. Jennifer Turner
 - Jennifer
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Mrs. Jennifer
 
@@ -94,8 +94,8 @@ Use titles with full names or surnames but do not use titles when addressing use
 
 Use full stops for all abbreviated professional titles in American English.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Dr.
 - Prof.
@@ -108,15 +108,15 @@ Use full stops for all abbreviated professional titles in American English.
 
 Use capital letters for corporate titles especially with the name and use capital letters for corporate title acronyms.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Chief Financial Officer Teresa Lopez
 - Teresa Lopez (Chief Financial Officer)
 - Teresa Lopez (CFO)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - chief financial officer Teresa Lopez
 
@@ -125,15 +125,15 @@ Use capital letters for corporate titles especially with the name and use capita
 
 Use lower case when titles are used generically (without a name) and separate titles from names with a comma.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - The chief financial officer for the company will hold a press conference tomorrow.
 - The project manager needs to schedule maintenance.
 - Carol Jones, Chairwoman of the Supervisory Board, spoke at the press conference yesterday.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Call the Manager.
 
@@ -142,13 +142,13 @@ Use lower case when titles are used generically (without a name) and separate ti
 
 Always capitalize Managing Board and use lower case for "member".
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - John Smith is a member of the Managing Board.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - John Smith is a member of the managing board.
 
