--- a/docs/guidelines/language/formatting/software-versions.mdx
+++ b/docs/guidelines/language/formatting/software-versions.mdx
@@ -13,13 +13,13 @@ description: 'Consistency in writing about versions builds trust and helps users
 
 Write "version" in full without abbreviating when there is enough space within the user interface.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Version 2.12.6
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - ver 2.12.6
 
@@ -28,8 +28,8 @@ Write "version" in full without abbreviating when there is enough space within t
 
 Use "Version" with a capital V when it starts a sentence.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Version 3.5.1 has three new exciting changes.
 
@@ -38,8 +38,8 @@ Use "Version" with a capital V when it starts a sentence.
 
 Use "Version" with a capital V when referring to a named release or is used as a label.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Our migration guide for moving from Version 2 to Version 3 is below.
 
@@ -48,13 +48,13 @@ Use "Version" with a capital V when referring to a named release or is used as a
 
 Use "version" with a lower case "v" when talking about unspecified versions as it is not a proper noun.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Our next version contains three new exciting changes.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Our next Version contains three new exciting changes.
 
@@ -63,13 +63,13 @@ Use "version" with a lower case "v" when talking about unspecified versions as i
 
 Use a capital V without spacing between the letter and number to abbreviate versions.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - V2.1.0
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - v2.1.0
 
@@ -78,13 +78,13 @@ Use a capital V without spacing between the letter and number to abbreviate vers
 
 Start the first major release with 1 (not 01).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - V1.0.0
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - V01.0.0
 
@@ -93,13 +93,13 @@ Start the first major release with 1 (not 01).
 
 End versions without a full stop at the end.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - V1.0.0
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - V1.0.0.
 
@@ -108,13 +108,13 @@ End versions without a full stop at the end.
 
 Use single digits without adding extra zeros to make it easier to read.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - V3.2.5
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - V03.02.05
 
@@ -123,14 +123,14 @@ Use single digits without adding extra zeros to make it easier to read.
 
 Add identifiers, such as alpha, before or after version numbers for pre-releases.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - V1.0.0-beta
 - Beta V5.2
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - V1.0.0-Beta
 
