--- a/docs/guidelines/language/formatting/date.mdx
+++ b/docs/guidelines/language/formatting/date.mdx
@@ -14,14 +14,14 @@ description: Accurate dates and times are essential in industrial settings, serv
 
 Use the ISO 8601 date and time format standards when backend localization is not possible.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 2025-04-08 (April 8, 2025)
 - 14:30:00 (24-hour format)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 2025/04/08
 - 2:30 PM
@@ -31,8 +31,8 @@ Use the ISO 8601 date and time format standards when backend localization is not
 
 Add tooltips or in-line text to support users and clarify which format is being used.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - YYYY-MM-DD
 - 24-hour format
@@ -44,13 +44,13 @@ Add tooltips or in-line text to support users and clarify which format is being 
 
 Avoid adding unnecessary punctuation to abbreviated dates.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Jan
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Jan.
 
@@ -61,13 +61,13 @@ Avoid adding unnecessary punctuation to abbreviated dates.
 
 Write out full dates using commas to separate elements within longer texts and paragraphs.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Monday, January 12, 2025
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Monday: January 12th: 2025
 
@@ -76,14 +76,14 @@ Write out full dates using commas to separate elements within longer texts and p
 
 Write out dates with the abbreviated form using dashes (hyphens) instead of slashes for better readability.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Dec-26-2025
 - Apr-09-2025
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Apr/09/2025
 - Apr 09/2025
@@ -93,13 +93,13 @@ Write out dates with the abbreviated form using dashes (hyphens) instead of slas
 
 Write dates in tables using abbreviated months to avoid confusion and the need for further tooltips or explanation.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Apr-09
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 04-09
 
@@ -108,13 +108,13 @@ Write dates in tables using abbreviated months to avoid confusion and the need f
 
 Avoid using "st" (as in 1st) or "th" (as in 5th) for a cleaner user interface.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Monday, January 12, 2025
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Monday, January 12th, 2025
 
@@ -125,14 +125,14 @@ Avoid using "st" (as in 1st) or "th" (as in 5th) for a cleaner user interface.
 
 Start all days with a capital letter. Use three-letter abbreviations without punctuation when there isn’t enough space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Monday, Tuesday, Wednesday, etc.
 - Mon
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Mon.
 
@@ -143,13 +143,13 @@ Start all days with a capital letter. Use three-letter abbreviations without pun
 
 Avoid calendar weeks (CW) whenever possible as these are very specific to certain regions.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Week 15 (April 7 – April 13, 2025)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - CW 15 (15th week of the year)
 - CW 15/2025 (15th calendar week year 2025)
@@ -162,14 +162,14 @@ Avoid calendar weeks (CW) whenever possible as these are very specific to certai
 
 Start all months with a capital letter. Use abbreviations without punctuation when there isn’t enough space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - January, February, March, etc.
 - Jan
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Jan.
 
@@ -180,13 +180,13 @@ Start all months with a capital letter. Use abbreviations without punctuation wh
 
 Use the four-digit format and never abbreviate in industrial applications.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 2023
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - ’23
 
@@ -197,13 +197,13 @@ Use the four-digit format and never abbreviate in industrial applications.
 
 Use plural -s when talking about decades.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 1980s
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 1980’s
 
@@ -214,13 +214,13 @@ Use plural -s when talking about decades.
 
 Use "th" and "nd" to reference centuries with ordinal numbers (sequencing) without using superscript.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Welcome to the 21st century of industrial innovation! Our app uses AI to deliver efficiency in your operations.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Welcome to the 21<sup>st</sup> century of industrial innovation! Our app uses AI to deliver efficiency in your operations.
 
