--- a/docs/guidelines/language/formatting/measurements.mdx
+++ b/docs/guidelines/language/formatting/measurements.mdx
@@ -12,14 +12,14 @@ description: In industrial settings, accurate measurements are vital for ensurin
 
 Use the same measurement format and style throughout your user interface and consider localization conflicts. Write out measurement abbreviations in full if there is any chance users will not understand.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - British Thermal Unit (BTU): 1
 - Nautical Mile (nmi): 8
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - BTU: 1
 - nmi: 8
@@ -29,8 +29,8 @@ Use the same measurement format and style throughout your user interface and con
 
 Avoid line breaks between the value and the unit by using a protected (non-breaking) space. Use the singular when talking about a specific number and in abbreviations. Use lower case as the default for most unit abbreviations.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 200 kg
 - 20 kg
@@ -38,7 +38,7 @@ Avoid line breaks between the value and the unit by using a protected (non-break
 - 200 g
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 200kg
 - 20 kgs
@@ -50,14 +50,14 @@ Avoid line breaks between the value and the unit by using a protected (non-break
 
 Use upper case for unit abbreviations named after people and lower case when the abbreviation is written out in full.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 6 volts
 - 6 V
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 6 Volts
 - 6 v
@@ -77,14 +77,14 @@ Use upper case for unit abbreviations named after people and lower case when the
 
 Use a slash to show how compound units are divided for clarity.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - km/h
 - A/m
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - km-h
 
@@ -95,15 +95,15 @@ Use a slash to show how compound units are divided for clarity.
 
 Use "L" (liter) instead of lower case "l" only if there is any doubt users will confuse it with "1".
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 2 L
 - 11 L
 - 2 l
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 11 l
 
@@ -112,8 +112,8 @@ Use "L" (liter) instead of lower case "l" only if there is any doubt users will 
 
 Use upper case "B" to abbreviate byte and lower case "b" to abbreviate bit. Use M for mega, G for giga and T for tera to distinguish from m (milli), g (gram) and t (ton).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 120 MB (megabytes)
 - 120 Mb (megabits)
@@ -122,7 +122,7 @@ Use upper case "B" to abbreviate byte and lower case "b" to abbreviate bit. Use 
 - 1 THz
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 1 T
 
@@ -133,14 +133,14 @@ Use upper case "B" to abbreviate byte and lower case "b" to abbreviate bit. Use 
 
 Use superscript to indicate cubed measurements.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - m³
 - cm³
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - m3
 - cm3
@@ -150,13 +150,13 @@ Use superscript to indicate cubed measurements.
 
 Use the plain text caret symbol (^) when superscript is not possible in your application.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - m^3
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - m3
 
@@ -165,13 +165,13 @@ Use the plain text caret symbol (^) when superscript is not possible in your app
 
 Use mcg to abbreviate microgram instead of the Greek letter mu (μ).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 1000 mcg
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 1000 μg
 
@@ -182,13 +182,13 @@ Use mcg to abbreviate microgram instead of the Greek letter mu (μ).
 
 Use a non-breaking space (Ctrl + Shift + Space) between the number and the degree symbol.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 23 °C
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 23°C
 - 23° C
@@ -198,13 +198,13 @@ Use a non-breaking space (Ctrl + Shift + Space) between the number and the degre
 
 Use the degree symbol (°) before the initial letter of the temperature scale without a space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 23 °C
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 23 C°
 
@@ -215,15 +215,15 @@ Use the degree symbol (°) before the initial letter of the temperature scale wi
 
 Use "px" in lower case to abbreviate pixels with a space for readability without periods after px, pt and dpi (dots per inch).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 45 px
 - 1280 x 780 px
 - 4 pt
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 45PX
 - 1280x780px
