--- a/docs/guidelines/language/formatting/numbers.mdx
+++ b/docs/guidelines/language/formatting/numbers.mdx
@@ -14,13 +14,13 @@ description: In industrial settings, numbers and percentages are key to tracking
 
 Write "Number" or "number" when there is enough space within the user interface.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Number
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Num.
 
@@ -29,13 +29,13 @@ Write "Number" or "number" when there is enough space within the user interface.
 
 Use "No." as an abbreviation for number with a period and without a space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - No.6
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Num.6
 
@@ -44,13 +44,13 @@ Use "No." as an abbreviation for number with a period and without a space.
 
 Avoid using the # symbol with numbers.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Number 6
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - #6
 
@@ -59,13 +59,13 @@ Avoid using the # symbol with numbers.
 
 Write numbers as digits, such as "9" instead of "nine", in industrial user interfaces.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - We’ve released 3 new features this month.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - We’ve released three new features this month.
 
@@ -74,13 +74,13 @@ Write numbers as digits, such as "9" instead of "nine", in industrial user inter
 
 Write numbers with four digits and more with commas to separate thousands, millions, etc. in American English.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 100,000
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 100.000
 
@@ -91,8 +91,8 @@ Write numbers with four digits and more with commas to separate thousands, milli
 
 Use en dashes (–) instead of hyphens (-) for ranges.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 10–0
 - The shipment weighs 50–75kg
@@ -102,13 +102,13 @@ Use en dashes (–) instead of hyphens (-) for ranges.
 
 Write out the unit only once in ranges.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - The temperature fluctuated between 20–25°C
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - The temperature fluctuated between 20°C–25°C
 
@@ -117,13 +117,13 @@ Write out the unit only once in ranges.
 
 Use the minus hyphen for negative numbers which is better aligned than a normal hyphen (Unicode U+2212).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - -12
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - —12
 
@@ -132,8 +132,8 @@ Use the minus hyphen for negative numbers which is better aligned than a normal 
 
 Use either "to" or separate text fields for ranges with minus numbers for readability.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - -12 to -15°C
 - Min temp (C): -12° / Max temp (C): -15°
@@ -145,15 +145,15 @@ Use either "to" or separate text fields for ranges with minus numbers for readab
 
 Write decimals using a period (.) to separate the whole number from the fractional part in American English.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 0.5
 - 5,245.15
 - 2.5 million
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 0,5
 - 5.245,15
@@ -167,15 +167,15 @@ Write decimals using a period (.) to separate the whole number from the fraction
 Use "K" as an abbreviation for thousand, "M" for million, and "B" for billion without a period or space. Consider variations in other languages and never use abbreviations when there is doubt.
 
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 34K
 - 34M
 - 34B
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 34 k
 - 34 mil
@@ -186,14 +186,14 @@ Use "K" as an abbreviation for thousand, "M" for million, and "B" for billion wi
 
 Use the singular "million" when talking about a specific number.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 34 million
 - Our system processes one million connections.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 34 millions
 - Our system processes one millions connections.
@@ -203,8 +203,8 @@ Use the singular "million" when talking about a specific number.
 
 Use the plural "millions" when talking about an unspecific number.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Our goal is to deliver software to millions of happy users worldwide.
 
@@ -213,13 +213,13 @@ Use the plural "millions" when talking about an unspecific number.
 
 Write out numbers in the millions and billions ("one million" instead of "1,000,000") in longer texts and paragraphs.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - We have over one million users worldwide.
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - We have over 1,000,000 users worldwide.
 
@@ -228,8 +228,8 @@ Write out numbers in the millions and billions ("one million" instead of "1,000,
 
 Use numerals for numbers in the millions for dates, addresses, units of measurement, currencies and percentages.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - The temperature can reach 1,000,000°C in the pod.
 - The cargo ship can carry up to 1,000,000kg.
@@ -244,13 +244,13 @@ Use numerals for numbers in the millions for dates, addresses, units of measurem
 
 Use the % symbol instead of writing out "percentage" within the user interface to save space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 10%
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 10 percent
 
@@ -259,13 +259,13 @@ Use the % symbol instead of writing out "percentage" within the user interface t
 
 Use % after the number and without a space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 10%
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - %10
 
@@ -276,8 +276,8 @@ Use % after the number and without a space.
 
 Separate phone numbers into groups for clarity when backend localization or separate fields are not possible.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Country code, area code, numbers in groupings of 3 or 4
 - 0044, 208, 899 7032
@@ -287,15 +287,15 @@ Separate phone numbers into groups for clarity when backend localization or sepa
 
 Use the plus symbol (+) or "00" before the country code and show extension numbers with a hyphen.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - +49 123 456 7890
 - 0049 123 456 7890
 - 0123 456 7890-12
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 0123 456 7890 12
 
