--- a/docs/guidelines/language/formatting/timezones.mdx
+++ b/docs/guidelines/language/formatting/timezones.mdx
@@ -15,14 +15,14 @@ description: Time and time-related guidelines help prevent misunderstandings and
 
 Use the 24-hour clock system (the ISO 8601 time standards) when backend localization is not possible.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 11:00
 - 23:00
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 11am
 - 11PM
@@ -32,13 +32,13 @@ Use the 24-hour clock system (the ISO 8601 time standards) when backend localiza
 
 Use colons (:) to split times between hours, minutes, and seconds.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - hh:mm:ss
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - hh.mm.ss
 
@@ -47,15 +47,15 @@ Use colons (:) to split times between hours, minutes, and seconds.
 
 Use periods (.) to add milliseconds and nanoseconds, not a colon (:) according to ISO standards.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - hh:mm:ss.mms
 - hh:mm:ss.sss (ISO 8601 standard)
 - 0:00:00.920
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 0:00:00:920
 
@@ -66,13 +66,13 @@ Use periods (.) to add milliseconds and nanoseconds, not a colon (:) according t
 
 Use an en (–) dash to represent time ranges and intervals without spacing on either side of the dash.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Routine maintenance: 08:00–11:00
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Packaging line active: 10:00-18:00
 
@@ -81,8 +81,8 @@ Use an en (–) dash to represent time ranges and intervals without spacing on e
 
 Use "from" and "to" for time ranges with separate text or input fields.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - From: 14:00
 - To: 15:00
@@ -94,8 +94,8 @@ Use "from" and "to" for time ranges with separate text or input fields.
 
 Use numerals to write about durations with the full or abbreviated time unit (depending on space in the UI).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Each shift lasts 8 hrs.
 - Routine maintenance takes approximately 1 hour 30 minutes.
@@ -108,13 +108,13 @@ Use numerals to write about durations with the full or abbreviated time unit (de
 
 Write "time zone" as two words, not one word "timezone".
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Select time zone
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Select timezone
 
@@ -123,8 +123,8 @@ Write "time zone" as two words, not one word "timezone".
 
 When writing out the full time zone, add the UTC offset in brackets afterwards.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - British Summer Time (UTC+1)
 - Central European Summer Time (UTC+2)
@@ -135,8 +135,8 @@ When writing out the full time zone, add the UTC offset in brackets afterwards.
 
 Use abbreviated time zones with or without the UTC offset within the UI to save space.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - EST
 - EST (UTC +3)
@@ -146,13 +146,13 @@ Use abbreviated time zones with or without the UTC offset within the UI to save 
 
 Give time zones capital letters for each word.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Eastern Standard Time
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - eastern standard time
 
@@ -161,13 +161,13 @@ Give time zones capital letters for each word.
 
 Give abbreviated time zones capital letters.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - EST
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - est
 
@@ -176,13 +176,13 @@ Give abbreviated time zones capital letters.
 
 Avoid punctuation when writing time zones.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - EST
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - EST.
 - E.S.T.
@@ -192,13 +192,13 @@ Avoid punctuation when writing time zones.
 
 Add a space between the time and the time zone.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - 15:23 EST
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - 15:23EST
 
@@ -207,13 +207,13 @@ Add a space between the time and the time zone.
 
 Write location and UTC offset in this order: city, country (UTC offset).
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Berlin, Germany (UTC+1)
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - (UTC+1) Berlin, Germany
 
@@ -222,8 +222,8 @@ Write location and UTC offset in this order: city, country (UTC offset).
 
 Present multiple time zones clearly by using either "Local time" or "Your local time" for emphasis.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Meeting time: 2025-04-08 14:00 (Berlin, UTC+01:00)<br/>Your local time: 2025-04-08 21:00 (Tokyo, UTC+09:00)
 - Support hours (New York): 09:00 - 17:00 (UTC-04:00)<br/>Your local time (Sydney): 23:00 - 07:00 (UTC+10:00)
@@ -236,13 +236,13 @@ Present multiple time zones clearly by using either "Local time" or "Your local 
 
 Use "current" for active, ongoing states and avoid "actual" when referring to time.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Current temperature: 72°F
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Actual temperature: 72°F
 
@@ -251,8 +251,8 @@ Use "current" for active, ongoing states and avoid "actual" when referring to ti
 
 Use "latest" for the newest updates or versions and "last" for final items in a sequence.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Latest firmware update: V2.1.5
 - Last firmware update before end of life: V2.1.5
@@ -262,13 +262,13 @@ Use "latest" for the newest updates or versions and "last" for final items in a 
 
 Use "recent" for past events that have just happened.
 
-<div class="dos-and-donts" markdown>
-<div class="dos" markdown>
+<div className="dos-and-donts" markdown="true">
+<div className="dos" markdown="true">
 
 - Recent alerts: 2 warnings
 
 </div>
-<div class="donts" markdown>
+<div className="donts" markdown="true">
 
 - Recent firmware update: V2.1.5
 
