doc/improved formatting
formatting
does and don'ts for progress updates added

--- a/docs/guidelines/language/non-critical-information-messages.mdx
+++ b/docs/guidelines/language/non-critical-information-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3
+sidebar_position: 99
 Sidebar_lable: Non-critical information messages
 title: Non-critical information messages
 doc-type: 'banner'
@@ -37,7 +37,7 @@ System backup completed at 21:00.
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-Don't worry! We'll make sure your backup is complete before your morning coffee on Friday!
+Don’t worry! We’ll make sure your backup is complete before your morning coffee on Friday!
 </div>
 </div>
 
@@ -147,7 +147,7 @@ Line 3 shift schedule changed. See what's new.
 
 <div class="dos-and-donts" markdown>
 <div class="donts" markdown>
-🔄 Line 3 shift schedule updated. 👉 See what's new.
+🔄 Line 3 shift schedule updated. 👉 See what’s new.
 </div>
 </div>
 
@@ -155,8 +155,8 @@ Line 3 shift schedule changed. See what's new.
 
 * Do use an alternative modal if your notifications are too long and cover multiple points
 * Do make sure users understand the notification is not critical
-* Don't add multiple pieces of information into one notification
-* Don't insert multiple user actions into short notifications
+* Don’t add multiple pieces of information into one notification
+* Don’t insert multiple user actions into short notifications
 
 ## Related
 
