--- a/docs/guidelines/language/progress-updates.mdx
+++ b/docs/guidelines/language/progress-updates.mdx
@@ -14,10 +14,10 @@ description: While some companies use humorous text like "Chopping the onions…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Downloading assets...
+Downloading assets…
 </div>
 <div class="donts" markdown>
-Downloading Assets...
+Downloading Assets…
 </div>
 </div>
 
@@ -55,7 +55,7 @@ Will be loading…
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-Downloading assets...
+Downloading assets…
 </div>
 <div class="donts" markdown>
 File loading…
@@ -169,8 +169,14 @@ Processing your request. This usually takes about 1–2 minutes.
 This step takes a bit longer than usual.
 </div>
 <div class="dos" markdown>
-We're preparing your dashboard. Once it's ready, you'll be able to customize your view.
+We’re preparing your dashboard. Once it’s ready, you’ll be able to customize your view.
 </div>
 </div>
+
+## Dos and Don’ts
+* Do use the present simple progressive (continuous, -ing) verb form
+* Do use verbs before nouns to focus on the action
+* Don’t apologize for how long the progress takes
+* Don’t use vague phrases like: "Please wait."
 
 ## Related
