--- a/docs/guidelines/language/time-related-messages.mdx
+++ b/docs/guidelines/language/time-related-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 8
+sidebar_position: 98
 sidebar_label: Time-related messages
 title: Time-related messages
 doc-type: 'banner'
@@ -202,7 +202,7 @@ Due to the size of the migration, we have no idea when it will finish.
 
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
-The application will not be available during the update. We'll notify you when it's ready.
+The application will not be available during the update. We’ll notify you when it’s ready.
 </div>
 </div>
 
