--- a/docs/guidelines/language/warning-messages.mdx
+++ b/docs/guidelines/language/warning-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 2
+sidebar_position: 55
 sidebar_label: Warning messages
 title: Warning messages
 doc-type: 'banner'
@@ -46,7 +46,7 @@ Temperature warning
 <div class="dos-and-donts" markdown>
 <div class="dos" markdown>
 Heading: Leave without saving
-Description: You're about to leave this page. Unsaved changes will be lost. Go back to save changes or exit without saving.
+Description: You’re about to leave this page. Unsaved changes will be lost. Go back to save changes or exit without saving.
 Button: Leave without saving
 Button: Go back
 </div>
