--- a/docs/guidelines/language/toast-messages.mdx
+++ b/docs/guidelines/language/toast-messages.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 5
+sidebar_position: 97
 sidebar_label: Toast messages
 title: Toast messages
 doc-type: 'banner'
@@ -212,8 +212,8 @@ Connection established successfully
 
 * Do add extra time when there is an action option
 * Do use consistent wording to help users scan toast messages easier
-* Don't use full sentences or complex verb forms
-* Don't add an action unless absolutely necessary
+* Don’t use full sentences or complex verb forms
+* Don’t add an action unless absolutely necessary
 
 ## Related
 
