Update documentation links for form and picker options
Updated internal documentation links in date picker, date-time picker, input-date, and input-date-time guides to point to more specific sections and correct files. This improves navigation and clarity for users referencing related options and components.

--- a/docs/components/date-picker/guide.mdx
+++ b/docs/components/date-picker/guide.mdx
@@ -61,7 +61,7 @@ Individual calendar dates within a date picker have five states: Default, hover,
 
 ## Related
 
-- [Date input](../input)
+- [Date input](../input-date)
 - [Date time picker](../date-time-picker)
 - [Time picker](../time-picker)
 - [Writing guidelines for date and time](../../guidelines/language/formatting/date.mdx)
