--- a/docs/components/date-time-picker/guide.mdx
+++ b/docs/components/date-time-picker/guide.mdx
@@ -12,14 +12,14 @@ doc-type: 'tab-item'
 
 ## Options
 
-- **Value**: See [date picker](../date-picker) and [time picker](../time-picker).
-- **Single selection**: See [date picker](../date-picker).
+- **Value**: See [date picker](../date-picker/guide#options) and [time picker](../time-picker/guide#options).
+- **Single selection**: See [date picker](../date-picker/guide#options).
 - **Format**: Choose the date and time format (e.g. `yyyy/LL/dd` and `HH:mm:ss`).
-- **Min and max dates**: See [date picker](../date-picker).
-- **Date picker appearance**: See [date picker](../date-picker).
+- **Min and max dates**: See [date picker](../date-picker/guide#options).
+- **Date picker appearance**: See [date picker](../date-picker/guide#options).
   - **Week start**: Define which day the week starts on. By default, it will be defined based on the locale.
   - **Week numbers**: Show calendar weeks on the left side of the calendar when needed for reference.
-- **Time picker appearance**: See [time picker](../time-picker).
+- **Time picker appearance**: See [time picker](../time-picker/guide#options).
   - **Time reference**: Show time reference input for AM/PM notation when using 12-hour time format.
   - **Header**: Customize the header of the time picker.
 - **Corners**: By default, date time pickers show rounded corners to be consistent with the [dropdown](../dropdown). Use straight, left or right corners to combine with other components.
