--- a/docs/components/input-date-time/guide.mdx
+++ b/docs/components/input-date-time/guide.mdx
@@ -21,17 +21,17 @@ formReady: true
 
 ## Options
 
-- **Label**: See [form field](../forms-field).
-- **Required**: See [form field](../forms-field).
-- **Helper text**: See [form field](../forms-field).
-- **Feedback text**: See [form field](../forms-field).
-- **Show text as tooltip**: See [form field](../forms-field).
-- **Placeholder**: See [form field](../forms-field). We typically use a placeholder to show an example date time format to assist users when the field is empty.
-- **Text alignment**: See [form field](../forms-field) (by default at start).
+- **Label**: See [form field](../forms-field/guide#options).
+- **Required**: See [form field](../forms-field/guide#options).
+- **Helper text**: See [form field](../forms-field/guide#options).
+- **Feedback text**: See [form field](../forms-field/guide#options).
+- **Show text as tooltip**: See [form field](../forms-field/guide#options).
+- **Placeholder**: See [form field](../forms-field/guide#options). We typically use a placeholder to show an example date time format to assist users when the field is empty.
+- **Text alignment**: See [form field](../forms-field/guide#options) (by default at start).
 - **Error message**: Feedback text when date or time is not parsable. We typically use this to inform users that the entered date time format is incorrect and guide them to enter a valid date and time.
 - **Format**: Specify the date and time format (default ‘yyyy/LL/dd TT’ which results in 2014/08/06 13:07:04) to ensure that dates are entered in a consistent and recognizable format.
 - **Min and max dates**: Restrict the selectable date range by defining the earliest and latest dates users can choose.
-- **Date time picker appearance**: See [date time picker](../date-time-picker).
+- **Date time picker appearance**: See [date time picker](../date-time-picker#options).
 
 ## Behavior in context
 
